--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-scikit-learn
-nltk
-contractions
-gensim
-torch
-requests
-numpy
-matplotlib
-pandas
-transformers
+scikit-learn==1.4.1.post1
+nltk==3.8.1
+contractions==0.1.73
+gensim==4.3.2
+torch==2.2.1
+requests==2.31.0
+numpy==1.26.4
+matplotlib==3.8.3
+pandas==2.2.0
+transformers==4.38.1
 
