--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 scikit-learn==1.4.1.post1
+scipy==1.12.0
 nltk==3.8.1
 contractions==0.1.73
 gensim==4.3.2
@@ -8,6 +9,12 @@ numpy==1.26.4
 matplotlib==3.8.3
 pandas==2.2.0
 transformers==4.38.1
-spacy==3.3.0 # for en-core-web-md
-# python -m spacy download en_core_web_md
-
+sentence_transformers==2.7.0
+langchain_community==0.0.34
+langchain==0.1.16
+chromadb==0.4.24
+Flask==3.0.3
+llama_cpp_python==0.2.63
+# nltk.download('stopwords')
+# nltk.download('punkt')
+# nltk.download('wordnet')
