--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ sentence_transformers==2.7.0
 langchain_community==0.0.34
 langchain==0.1.16
 chromadb==0.4.24
-Flask==3.0.3
 llama_cpp_python==0.2.63
+pypdf==4.2.0
 # nltk.download('stopwords')
 # nltk.download('punkt')
 # nltk.download('wordnet')
