--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ chromadb==0.4.24
 llama_cpp_python==0.2.63
 pypdf==4.2.0
 Flask==3.0.3
+googletrans==4.0.0rc1
 # nltk.download('stopwords')
 # nltk.download('punkt')
 # nltk.download('wordnet')
